fix(apply): fix pattern in input tag in apply page

--- a/about.html
+++ b/about.html
@@ -82,13 +82,13 @@
             </dl>
           </section>
 
-          <figure class="group-photo">
+          <figure class="group-photo-figure">
             <img
-              class="group-photo-small"
+              class="group-photo-img"
               src="./images/team.jpg"
               alt="Photo of our group"
             />
-            <figcaption>Our Group</figcaption>
+            <figcaption>Group 1</figcaption>
           </figure>
         </section>
 
