--- a/apply.html
+++ b/apply.html
@@ -197,7 +197,7 @@
               is
               required
               and
-              pattern="[a-zA-Z0-9 ]{1,40}"
+              pattern=".{1,40}"
               required
             />
             <p class="error-message">
@@ -212,7 +212,7 @@
               name="Town"
               id="Town"
               placeholder="Town.."
-              pattern="[a-zA-Z0-9 ]{1,40}"
+              pattern=".{1,40}"
               required
             />
             <p class="error-message">
