--- a/enhancements.html
+++ b/enhancements.html
@@ -40,7 +40,7 @@
         <ul class="mobile-menu" aria-hidden="true">
           <li>
             <label for="toggle-menu-controller" aria-label="Close menu">
-              <img src="./images/menu-close.svg" alt="" />
+              <img src="./images/menu-close.svg" alt="Close Menu Icon" />
             </label>
           </li>
           <li><a href="./index.html">Home</a></li>
@@ -73,7 +73,10 @@
             <summary>Show Code Implementation</summary>
 
             <article class="code">
-              <img src="./images/page-transition-code.png" alt="code" />
+              <img
+                src="./images/page-transition-code.png"
+                alt="Page Transition Code"
+              />
             </article>
           </details>
         </article>
@@ -93,7 +96,10 @@
             <summary>Show Code Implementation in about us page</summary>
 
             <article class="code">
-              <img src="./images/responsiveness-code.png" alt="code" />
+              <img
+                src="./images/responsiveness-code.png"
+                alt="About Us Page Responsiveness Code"
+              />
             </article>
           </details>
         </article>
@@ -120,22 +126,22 @@
             <article class="code">
               <img
                 src="./images/mobile-navbar-code-1.png"
-                alt="navbar code 1"
+                alt="mobile navbar code 1"
               />
               <img
                 src="./images/mobile-navbar-code-2.png"
-                alt="navbar code 2"
+                alt="mobile navbar code 2"
               />
               <img
                 src="./images/mobile-navbar-code-3.png"
-                alt="navbar code 3"
+                alt="mobile navbar code 3"
               />
             </article>
           </details>
         </article>
       </section>
       <section class="enhancement-card">
-        <img src="./images/form.png" />
+        <img src="./images/form.png" alt="form" />
         <article class="description">
           <h2>Form Input Error Messages</h2>
           <p>
@@ -154,7 +160,7 @@
             <summary>Show Code Implementation in about us page</summary>
 
             <article class="code">
-              <img src="./images/form-code.png" alt="form code" />
+              <img src="./images/form-code.png" alt="Form Message Code" />
             </article>
           </details>
         </article>
@@ -179,7 +185,7 @@
               <article class="code">
                 <img
                   src="./images/image-scale-animation-code.png"
-                  alt="image scale animation code"
+                  alt="Image Scale Animation Code"
                 />
               </article>
             </details>
@@ -194,14 +200,21 @@
         <section class="contacts">
           <section>
             <h3>Say Hello</h3>
-            <p>+60102906487</p>
-            <p>j23029452@newinti.student.edu.my</p>
+            <p><a href="tel:+60102906487">+60102906487</a></p>
+            <p>
+              <a href="mailto:j23039452@newinti.student.edu.my" target="_blank">
+                j23029452@newinti.student.edu.my
+              </a>
+            </p>
           </section>
           <section>
             <h3>Join InspireCode</h3>
             <p>Stay Up to Date on YouYube</p>
             <p class="youtube">
-              <a href="" target="_blank">
+              <a
+                href="https://www.youtube.com/watch?v=JHhXm2GSDTo"
+                target="_blank"
+              >
                 <img src="./images/youtube.svg" alt="youtube icon"
               /></a>
               Our YouTube
