--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <ul class="mobile-menu" aria-hidden="true">
           <li>
             <label for="toggle-menu-controller" aria-label="Close menu">
-              <img src="./images/menu-close.svg" alt="" />
+              <img src="./images/menu-close.svg" alt="Close Menu Icon" />
             </label>
           </li>
-          <li><a href="./index.html" class="active">Home</a></li>
+          <li><a class="active" href="./index.html">Home</a></li>
           <li><a href="./jobs.html">Jobs</a></li>
           <li><a href="./about.html">About</a></li>
           <li><a href="./enhancements.html">Enhancements</a></li>
@@ -52,14 +52,14 @@
     </header>
 
     <main class="index">
-      <section class="hero-1">
+      <section class="hero-second">
         <h1>
           Empowering businesses with cutting-edge solutions to transform ideas
           into reality
         </h1>
         <button><a href="#services">Discover Our Services</a></button>
       </section>
-      <section class="hero">
+      <section class="hero-first">
         <section class="hero-title">
           <h1>
             Start <br />
@@ -199,14 +199,21 @@
         <section class="contacts">
           <section>
             <h3>Say Hello</h3>
-            <p>+60102906487</p>
-            <p>j23029452@newinti.student.edu.my</p>
+            <p><a href="tel:+60102906487">+60102906487</a></p>
+            <p>
+              <a href="mailto:j23039452@newinti.student.edu.my" target="_blank">
+                j23029452@newinti.student.edu.my
+              </a>
+            </p>
           </section>
           <section>
             <h3>Join InspireCode</h3>
             <p>Stay Up to Date on YouYube</p>
             <p class="youtube">
-              <a href="" target="_blank">
+              <a
+                href="https://www.youtube.com/watch?v=JHhXm2GSDTo"
+                target="_blank"
+              >
                 <img src="./images/youtube.svg" alt="youtube icon"
               /></a>
               Our YouTube
