fix(all): fixing bugs and add contents in job page

--- a/about.html
+++ b/about.html
@@ -75,8 +75,8 @@
               <dd>Introduction to Web Development</dd>
               <dt>Email:</dt>
               <dd>
-                <a href="mailto:groupemail@example.com"
-                  >groupemail@example.com</a
+                <a href="mailto:j23039452@newinti.student.edu.my"
+                  >j23039452@newinti.student.edu.my</a
                 >
               </dd>
             </dl>
