--- a/index.html
+++ b/index.html
@@ -186,10 +186,18 @@
       <section class="partner">
         <h2 class="partner-title">Our partners</h2>
         <section class="partner-companies">
-          <img src="./images/google.png" alt="google" />
-          <img src="./images/apple.png" alt="apple" />
-          <img src="./images/facebook.svg" alt="facebook" />
-          <img src="./images/microsoft.png" alt="mircosoft" />
+          <a href="https://google.com" target="_blank"
+            ><img src="./images/google.png" alt="google"
+          /></a>
+          <a href="https://apple.com" target="_blank">
+            <img src="./images/apple.png" alt="apple"
+          /></a>
+          <a href="https://facebook.com" target="_blank">
+            <img src="./images/facebook.svg" alt="facebook" />
+          </a>
+          <a href="https://microsoft.com" target="_blank">
+            <img src="./images/microsoft.png" alt="mircosoft" />
+          </a>
         </section>
       </section>
     </main>
