--- a/jobs.html
+++ b/jobs.html
@@ -58,7 +58,7 @@
       <section class="job-detail-list">
         <section class="job-detail" id="data-quality-manager">
           <h2>Data Quality Manager</h2>
-          <p><strong>RM 8000</strong> - <strong>RM 10000</strong></p>
+          <p><strong>RM 7000</strong> - <strong>RM 9000</strong></p>
           <section class="location">
             <p class="remote">Remote</p>
             <p class="office">Office</p>
@@ -74,48 +74,96 @@
             <p>
               The Data Quality Manager will be responsible for overseeing the
               quality of data, ensuring accuracy, consistency, and reliability
-              across the company’s databases.
+              across the company’s databases. This role involves collaborating
+              with various departments to maintain data integrity and implement
+              best practices.
             </p>
 
             <h3>Key Responsibilities</h3>
             <ul>
               <li>
                 Manage data quality initiatives and ensure adherence to data
-                governance standards
+                governance standards.
               </li>
               <li>
                 Collaborate with IT teams to identify and rectify data quality
-                issues
+                issues.
               </li>
-              <li>Develop and maintain data quality control processes</li>
-              <li>Train staff on data management best practices</li>
+              <li>
+                Develop and maintain data quality control processes and
+                protocols.
+              </li>
+              <li>
+                Train staff on data management best practices and promote a
+                data-driven culture.
+              </li>
+              <li>
+                Conduct regular audits of data and systems to ensure compliance
+                with established standards.
+              </li>
+              <li>
+                Analyze data discrepancies and implement corrective actions to
+                mitigate risks.
+              </li>
+              <li>
+                Work closely with stakeholders to define data quality metrics
+                and reporting frameworks.
+              </li>
+              <li>
+                Monitor data quality KPIs and provide insights to management for
+                decision-making.
+              </li>
+              <li>
+                Lead cross-functional teams in data cleansing and validation
+                projects.
+              </li>
             </ul>
 
             <h3>Qualifications</h3>
             <h4>Essential</h4>
             <ol>
               <li>
-                Bachelor's degree in Information Systems, Data Science, or
-                related field
+                Bachelor's degree in Information Systems, Data Science, or a
+                related field.
               </li>
               <li>
-                5+ years of experience in data management or data quality roles
+                5+ years of experience in data management or data quality roles.
               </li>
-              <li>Strong knowledge of data quality frameworks and tools</li>
+              <li>Strong knowledge of data quality frameworks and tools.</li>
+              <li>
+                Excellent analytical skills with a keen attention to detail.
+              </li>
+              <li>
+                Strong communication and interpersonal skills to collaborate
+                effectively.
+              </li>
             </ol>
 
             <h4>Preferable</h4>
             <ol>
               <li>
                 Experience with data governance tools such as Informatica,
-                Talend, or similar
+                Talend, or similar.
               </li>
-              <li>Proficiency in SQL and data analysis techniques</li>
+              <li>Proficiency in SQL and data analysis techniques.</li>
+              <li>
+                Familiarity with programming languages such as Python or R for
+                data manipulation.
+              </li>
+              <li>
+                Certification in data quality management or data governance is a
+                plus.
+              </li>
             </ol>
           </section>
-
+          <a
+            class="reference"
+            href="https://www.jobstreet.com.my/data-analyst-jobs?jobId=78987181&type=standout"
+            >Reference</a
+          >
           <a href="./apply.html"><button>Apply Now</button></a>
         </section>
+
         <section class="job-detail" id="cloud-architect">
           <h2>Cloud Architect</h2>
           <p><strong>RM 12000</strong> - <strong>RM 14000</strong></p>
@@ -125,33 +173,92 @@
           </section>
           <p><strong>Reference Number:</strong> CA02A</p>
           <p><strong>Reports To:</strong> CTO</p>
+
           <section class="job-description">
             <h3>Job Description</h3>
             <p>
               Design, manage, and maintain cloud infrastructure, ensuring high
-              performance and scalability for enterprise systems.
+              performance and scalability for enterprise systems. The Cloud
+              Architect will play a critical role in implementing cloud
+              solutions that enhance organizational agility and drive
+              innovation.
             </p>
 
             <h3>Key Responsibilities</h3>
             <ul>
-              <li>Design cloud-based solutions</li>
-              <li>Ensure system security and compliance</li>
+              <li>Design cloud-based solutions tailored to business needs.</li>
+              <li>
+                Ensure system security and compliance with industry standards.
+              </li>
+              <li>
+                Develop cloud strategies to optimize performance and
+                cost-effectiveness.
+              </li>
+              <li>
+                Implement automation and orchestration to streamline operations.
+              </li>
+              <li>
+                Collaborate with development teams to integrate cloud services
+                seamlessly.
+              </li>
+              <li>
+                Monitor cloud infrastructure, troubleshoot issues, and provide
+                rapid resolutions.
+              </li>
+              <li>
+                Stay updated on the latest cloud technologies and industry
+                trends.
+              </li>
+              <li>
+                Provide technical guidance and mentorship to team members.
+              </li>
+              <li>
+                Evaluate and recommend cloud service providers based on project
+                requirements.
+              </li>
+              <li>
+                Lead cloud migration projects and assess risks associated with
+                transitions.
+              </li>
             </ul>
 
             <h3>Qualifications</h3>
             <h4>Essential</h4>
             <ol>
-              <li>Proficiency in AWS, Azure, or Google Cloud</li>
-              <li>5+ years of experience in cloud architecture</li>
+              <li>Proficiency in AWS, Azure, or Google Cloud platforms.</li>
+              <li>
+                5+ years of experience in cloud architecture and solution
+                design.
+              </li>
+              <li>
+                Strong understanding of networking, storage, and database
+                services in the cloud.
+              </li>
+              <li>Excellent problem-solving and analytical skills.</li>
             </ol>
 
             <h4>Preferable</h4>
             <ol>
-              <li>Knowledge of DevOps practices</li>
+              <li>Knowledge of DevOps practices and CI/CD pipelines.</li>
+              <li>
+                Familiarity with containerization technologies such as Docker
+                and Kubernetes.
+              </li>
+              <li>
+                Experience in scripting languages like Python or Bash for
+                automation.
+              </li>
             </ol>
           </section>
+
+          <a
+            class="reference"
+            href="https://www.jobstreet.com.my/cloud-architect-jobs?jobId=78747653&type=standout"
+            >Reference</a
+          >
           <a href="./apply.html"><button>Apply Now</button></a>
         </section>
+
         <section class="job-detail" id="mobile-front-end-developer">
           <h2>Mobile/Tablet Front-End Developer</h2>
           <p><strong>RM 7000</strong> - <strong>RM 9000</strong></p>
@@ -161,33 +268,89 @@
           </section>
           <p><strong>Reference Number:</strong> MFD03</p>
           <p><strong>Reports To:</strong> Lead Mobile Developer</p>
+
           <section class="job-description">
             <h3>Job Description</h3>
             <p>
               Develop and design mobile front-end interfaces for applications
-              across various platforms like iOS and Android.
+              across various platforms like iOS and Android, ensuring a seamless
+              user experience.
             </p>
 
             <h3>Key Responsibilities</h3>
             <ul>
-              <li>Develop mobile front-end applications</li>
-              <li>Collaborate with UI/UX designers</li>
+              <li>
+                Develop mobile front-end applications with a focus on user
+                experience.
+              </li>
+              <li>
+                Collaborate with UI/UX designers to create engaging interfaces.
+              </li>
+              <li>Optimize applications for maximum speed and scalability.</li>
+              <li>
+                Implement responsive design principles for various devices.
+              </li>
+              <li>
+                Conduct code reviews and maintain high code quality standards.
+              </li>
+              <li>
+                Integrate with backend services and APIs for smooth
+                functionality.
+              </li>
+              <li>
+                Stay up-to-date with the latest industry trends and
+                technologies.
+              </li>
+              <li>Debug and resolve technical issues in a timely manner.</li>
+              <li>
+                Document development processes and maintain code repositories.
+              </li>
+              <li>
+                Participate in Agile ceremonies and contribute to project
+                planning.
+              </li>
             </ul>
 
             <h3>Qualifications</h3>
             <h4>Essential</h4>
             <ol>
-              <li>Experience with React Native or Flutter</li>
-              <li>Strong understanding of mobile UI principles</li>
+              <li>Experience with React Native or Flutter.</li>
+              <li>
+                Strong understanding of mobile UI principles and design
+                patterns.
+              </li>
+              <li>Proficiency in JavaScript and TypeScript.</li>
+              <li>
+                Experience in working with RESTful APIs and third-party
+                libraries.
+              </li>
             </ol>
 
             <h4>Preferable</h4>
             <ol>
-              <li>Experience in cross-platform mobile development</li>
+              <li>Experience in cross-platform mobile development.</li>
+              <li>Familiarity with version control systems (e.g., Git).</li>
+              <li>
+                Experience with testing frameworks for mobile applications.
+              </li>
+              <li>
+                Knowledge of state management libraries (e.g., Redux, MobX).
+              </li>
+              <li>
+                Experience with app deployment processes in the App Store and
+                Google Play.
+              </li>
             </ol>
           </section>
+
+          <a
+            class="reference"
+            href="https://www.jobstreet.com.my/mobile-front-end-developer-jobs?jobId=78428091&type=standout"
+            >Reference</a
+          >
           <a href="./apply.html"><button>Apply Now</button></a>
         </section>
+
         <section class="job-detail" id="full-stack-developer">
           <h2>Full-Stack Developer</h2>
           <p><strong>RM 8000</strong> - <strong>RM 10000</strong></p>
@@ -197,31 +360,73 @@
           </section>
           <p><strong>Reference Number:</strong> FSD05</p>
           <p><strong>Reports To:</strong> CTO</p>
+
           <section class="job-description">
             <h3>Job Description</h3>
             <p>
               Develop and maintain both front-end and back-end components of web
-              applications, ensuring a seamless integration of the two.
+              applications, ensuring a seamless integration of the two. The
+              Full-Stack Developer will be instrumental in delivering
+              high-quality, user-friendly web solutions.
             </p>
 
             <h3>Key Responsibilities</h3>
             <ul>
-              <li>Build front-end user interfaces</li>
-              <li>Develop back-end APIs and services</li>
+              <li>
+                Build front-end user interfaces that are intuitive and
+                responsive.
+              </li>
+              <li>Develop and maintain back-end APIs and services.</li>
+              <li>
+                Collaborate with designers to implement responsive web designs.
+              </li>
+              <li>
+                Optimize applications for speed, scalability, and performance.
+              </li>
+              <li>Conduct unit tests and debugging for quality assurance.</li>
+              <li>Implement security and data protection measures.</li>
+              <li>
+                Participate in code reviews and contribute to team knowledge
+                sharing.
+              </li>
+              <li>
+                Stay updated on emerging technologies and industry trends.
+              </li>
+              <li>
+                Document code and development processes for future reference.
+              </li>
+              <li>
+                Assist in the deployment of applications to production
+                environments.
+              </li>
             </ul>
 
             <h3>Qualifications</h3>
             <h4>Essential</h4>
             <ol>
-              <li>Proficiency in JavaScript (Node.js, React)</li>
-              <li>Experience with databases (SQL, MongoDB)</li>
+              <li>Proficiency in JavaScript (Node.js, React).</li>
+              <li>Experience with databases (SQL, MongoDB).</li>
+              <li>Strong understanding of RESTful API design principles.</li>
+              <li>Familiarity with version control systems (Git).</li>
             </ol>
 
             <h4>Preferable</h4>
             <ol>
-              <li>Familiarity with cloud deployment</li>
+              <li>Familiarity with cloud deployment (AWS, Azure).</li>
+              <li>
+                Experience with containerization technologies (Docker,
+                Kubernetes).
+              </li>
+              <li>Knowledge of front-end build tools (Webpack, Babel).</li>
+              <li>Experience with Agile development methodologies.</li>
             </ol>
           </section>
+
+          <a
+            class="reference"
+            href="https://www.jobstreet.com.my/full-stack-developer-jobs?jobId=78914621&type=standout"
+            >Reference</a
+          >
           <a href="./apply.html"><button>Apply Now</button></a>
         </section>
       </section>
@@ -244,7 +449,7 @@
             <p class="office">Office</p>
           </section>
           <section class="salary">
-            <p>RM 8000 - RM 10000</p>
+            <p>RM 7000 - RM 9000</p>
             <a href="#data-quality-manager">view</a>
           </section>
         </section>
