--- a/apply.html
+++ b/apply.html
@@ -152,7 +152,7 @@
             <label for="male">
               <input
                 type="radio"
-                name="gender"
+                name="Gender"
                 id="male"
                 value="Male"
                 required
