fix(apply): update option in state

--- a/apply.html
+++ b/apply.html
@@ -224,14 +224,14 @@
             <label for="State">State</label>
             <select name="State" id="State" required>
               <option value="" disabled selected>Please select</option>
-              <option value="VIC">Victoria (VIC)</option>
-              <option value="NSW">New South Wales (NSW)</option>
-              <option value="QLD">Queensland (QLD)</option>
-              <option value="NT">Northern Territory (NT)</option>
-              <option value="WA">Western Australia (WA)</option>
-              <option value="SA">South Australia (SA)</option>
-              <option value="TAS">Tasmania (TAS)</option>
-              <option value="ACT">Australian Capital Territory (ACT)</option>
+              <option value="VIC">VIC</option>
+              <option value="NSW">NSW</option>
+              <option value="QLD">QLD</option>
+              <option value="NT">NT</option>
+              <option value="WA">WA</option>
+              <option value="SA">SA</option>
+              <option value="TAS">TAS</option>
+              <option value="ACT">ACT</option>
             </select>
             <p class="error-message">State is required to choose 1 option.</p>
           </section>
